# sflkit

./: .coveragerc  .gitignore  BugsInPy.ipynb  Demo.ipynb  LICENSE  README.md  middle.py  pyproject.toml  report.html  requirements.txt  requirements_test.txt  results.json  setup.cfg  setup.py  sfl.py  subjects.json
.github/workflows/: test-sflkit.yml
events/PySnooper/3/failing/: f_5502f6d96ddff289f48a58ab7ad0fd2e
events/PySnooper/3/passing/: p_38f8950177f8a1d9103026f8dc43bfa2  p_3fd14f2ba5da610cb2c44e99db649578  p_c86604aee9275490a7c6f125e08a9550  p_ebc6d4ba7f6def44c99ca4bdaef4f2ae
events/ansible/1/failing/: f_8c92f4ba97aee349a670cf4a5970b5f2
events/ansible/1/passing/: p_011d4541720c008657f009708529f33c  p_0b9770e13beb1f67f3e2a41a07995945  p_11425ebaf3ba705f7652c90c844627da  p_1cc48bbdb5f7b719713ef71f3c5bd1b9  p_1f0eef66c7e32b47da1972686465516f  p_21bc5c4de9d1b659025d0eb5ef5cf63a  p_253ba65711307863ecb085c0eb1df338  p_259d60d633c8848c446f0e54f4bbe0cf  p_3257abac66b8e65a7316a94f14a79570  p_3f306e2aa34f4d7b01fc2e21714b2692  p_40935d83ee43634155dc62416265f667  p_4109dcbe16a50f7fc2c78517da579ab4  p_4e493ad8b0b3670ff52e904df3c8629a  p_4eba8ff4c8dd50f8e4443647650537fe  p_4ee089d4dd5153fd969c6cf14cc2c108  p_595c518b312f8bfe47f53ad6162e1c91  p_599d2b5cd378b4a39e3115df4b27cd04  p_5a791d02bf5cf20876ac2b19d2ee9517  p_64f406a4d2c407321bd37970ad2eda46  p_66f814d6b9db1614a43718b86b141402  p_6af9c85162b3f4007c5da31843e5dedb  p_6b03bbb3c577db9840b4d1bdba4dafc1  p_6cabbf14048f43601c7ed2e3c435c574  p_703dcff556632fcf9beef6b3b08ac80f  p_7b476fa2544aa8a960a567f6bc535d93  p_7c2c8eaf9e7a948a09cc9b779e8d4566  p_7eeae1959420c8e1e14cba3db869119a  p_82115b43224c6e25a12c50c911a20f8d  p_8ace41c3ccd4f9f2de4682f27f7c8d50  p_91aec5a4b928fc7b6192cdea079531e5  p_9294742c74225f0d6686fd1725d894d2  p_93910edac93996624f42c223a83a335b  p_97b9a279c73610ef3ff7d53607cdf17d  p_99d1ed89d5cc0321a76bf7379b01b839  p_9acfd9bd9e8edb89d13149a228e80695  p_a31f01f39c2dcbfd1111fa57ce37a848  p_a687a67239f6c771dec9b93e454d88a3  p_aaf496211f908e0c4d4c1008cc149aab  p_abf8363fa47d094f3ecd0a1059af176f  p_b63648f19c49b8a29b6fd91ac4e56991  (+16 more)
events/ansible/2/failing/: f_6304549ab2edbd3a8f23e41cd99d19cf  f_7bc247b97276fde5766d9887cf334868
events/ansible/2/passing/: p_03227b14dd14d5d209cff0785648e913  p_0baab136f84211e975a4b099a19a997b  p_0d4bc0cdce779763ff2fb8b5b81171e2  p_18d38e0f48d3e6cbde7ec0fc765e14ff  p_1ba8f9c090ad964a7ed5f8f50efc94be  p_1c809094a27f48b66bd75b9fd183eb43  p_1d6e68663859931c1f59d6b366bd7a05  p_26333ee6acfdf286000ce9cb9255115f  p_26493b0616fa97f14ddb68a75d6ecfbf  p_2de069ce20d593b5026305a8f44485b7  p_37a18d28c897e01983c20e3ff4358456  p_39c0654fe5095cf4439a26dbfea216cd  p_45fd47fd5fc45238cc96a69850c832b5  p_46ceee323b73f8da8120bd7bc55a1a4c  p_54c4f55827790ab92d866c2988049791  p_567242c92c400b8bd66611f3025714f2  p_5f55308d6e6b817bcb4c74d10b6c4dbb  p_6001bbd88146cdbeff423b0c9dc7e8a4  p_633c6d0c4c884c6fbd6b0742278dc5f5  (+52 more)
resources/inputs/: test.csv
resources/subjects/config/: suggestions.ini  test.ini
resources/subjects/csv/: csv2.py  main.py
sflkit/: __init__.py  color.py  config.py
sflkit/analysis/: __init__.py  analysis_type.py  analyzer.py  factory.py  mapping.py  predicate.py  similarity.py  spectra.py  suggestion.py
sflkit/events/: __init__.py  event.py
sflkit/instrumentation/: __init__.py  dir_instrumentation.py  file_instrumentation.py  lib.py
sflkit/language/: __init__.py  extract.py  finder.py  language.py  meta.py  visitor.py
sflkit/language/python/: extract.py  factory.py  finder.py  visitor.py
sflkit/model/: event_file.py  model.py  scope.py
sflkit/runners/: run.py
src/sflkit/: __init__.py  cli.py  color.py  config.py  evaluation.py  logger.py  mapping.py
src/sflkit/analysis/: __init__.py  analysis_type.py  analyzer.py  factory.py  mapping.py  predicate.py  similarity.py  spectra.py  suggestion.py
src/sflkit/events/: __init__.py  event.py
src/sflkit/instrumentation/: __init__.py  dir_instrumentation.py  file_instrumentation.py  lib.py
src/sflkit/language/: __init__.py  extract.py  finder.py  language.py  meta.py  visitor.py
src/sflkit/model/: __init__.py  event_file.py  model.py  scope.py
src/sflkit/runners/: __init__.py  run.py
tests/: test_analysis_objects.py  test_cli.py  test_color.py  test_config.py  test_coverage.py  test_evaluation.py  test_events.py  test_execution.py  test_instrumentation.py  test_language.py  test_predicates.py  test_runner.py  test_runner_pytest_versions.py  test_scope.py  test_spectra.py  test_suggestions.py  test_visitors.py  utils.py
(+1396 files in other folders)
