[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sflkit"
version = "0.1.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "SFLKit: : A Workbench for Statistical Fault Localization"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]

[project.urls]
"Homepage" = "https://github.com/uds-se/sflkit/"
"Bug Tracker" = "https://github.com/uds-se/sflkit/issues"

[tool.black]
line-length = 88
target-version = ['py310']
extend-exclude = '''
(
    ^/src/isla/bnf/*
  | ^/src/isla/isla_language/*
  | ^/src/isla/mexpr_lexer/*
  | ^/src/isla/mexpr_parser/*
)
'''