[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sflkit"
version = "0.2.12"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "SFLKit: : A Workbench for Statistical Fault Localization"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "sflkitlib>=0.0.1",
    "astor>=0.8.1",
    "numpy>=1.23.5",
    "matplotlib>=3.7.2",
    "sortedcollections>=2.1.0"
]

[project.urls]
"Homepage" = "https://github.com/uds-se/sflkit/"
"Bug Tracker" = "https://github.com/uds-se/sflkit/issues"

[project.scripts]
sflkit = "sflkit.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1"
]

[tool.black]
line-length = 88
target-version = ['py310']
