[metadata]
name = SFLKit
version = attr: sflkit.__version__
author = Marius Smytzek & Andreas Zeller
author_email = marius.smytzek@cispa.de
description = SFLKit: : A Workbench for Statistical Fault Localization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uds-se/sflkit
project_urls =
    Bug Tracker = https://github.com/uds-se/sflkit/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    astor>=0.8.1
    numpy>=1.24.0
    matplotlib>=3.4.3
    setuptools>=67.6.0
    pycparser>=2.20
    parameterized>=0.8.1

[options.packages.find]
where = src

[options.extras_require]
test =
    astor>=0.8.1
    numpy>=1.24.0
    matplotlib>=3.4.3
    setuptools>=67.6.0
    pycparser>=2.20
    pytest>=7.2.2
    pytest-cov>=4.0.0
    pytest-html>=3.2.0
    pytest-rerunfailures>=11.1.2
    parameterized>=0.8.1
dev =

[options.entry_points]
console_scripts =
    sflkit = sflkit.cli:main